--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.13.0",
+    "react-scroll-into-view-if-needed": "^3.0.1",
     "react-transition-group": "^4.4.5",
     "swiper": "^11.1.4"
   },
